[package]
name = "disbursereward"
version = "0.1.0"
description = "Disbursing rewards"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "disbursereward"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = {version = "0.17.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
