[package]
name = "vault"
version = "0.1.0"
description = "Manage Vault"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = {version = "0.17.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
